[gd_scene load_steps=16 format=2]

[ext_resource path="res://GameUI/MenuElements/OptionButtonElement.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameUI/MenuElements/ButtonElement.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameUI/MenuElements/resources/dudelings_ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://GameUI/MenuElements/CheckButtonElement.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameUI/Menus/SubMenus/SettingsSubMenu/settings_sub_menu.gd" type="Script" id=5]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_background_panel_stylebox.tres" type="StyleBox" id=6]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_backdrop_stylebox.tres" type="StyleBox" id=7]
[ext_resource path="res://GameUI/Menus/SubMenus/sub_menu_background_panel.gd" type="Script" id=8]
[ext_resource path="res://Assets/GameUI/fonts/custom/large_font.res" type="BitmapFont" id=9]
[ext_resource path="res://GameUI/MenuElements/MenuElementPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/GameUI/MenuElements/art/arrow_icons.png" type="Texture" id=11]
[ext_resource path="res://GameUI/fonts/main_font_bold_26.tres" type="DynamicFont" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 1
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 10, 14 )

[sub_resource type="Theme" id=3]

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 10, 14 )

[node name="SettingsSubMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 600 )
custom_styles/panel = ExtResource( 7 )
script = ExtResource( 5 )

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -307.0
margin_right = 350.0
margin_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 700, 586 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 8 )

[node name="MenuContainer" type="VBoxContainer" parent="BackgroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1

[node name="HeaderLabel" type="Label" parent="BackgroundPanel/MenuContainer"]
margin_right = 700.0
margin_bottom = 40.0
grow_horizontal = 2
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 9 )
text = "SETTINGS"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/MenuContainer"]
margin_top = 50.0
margin_right = 700.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="ElementContainer" type="VBoxContainer" parent="BackgroundPanel/MenuContainer/ScrollContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 674.0
margin_bottom = 1015.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="AudioSection" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
margin_right = 670.0
margin_bottom = 25.0
text = "Audio Settings"

[node name="VolumeLevelsButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 2 )]
margin_top = 25.0
margin_right = 670.0
margin_bottom = 97.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../TelemetryDeleteButton")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Announcer")
focus_next = NodePath("../Announcer/OptionButtonElement")
focus_previous = NodePath("../TelemetryDeleteButton")
size_flags_horizontal = 5
text = "Volume..."
icon = SubResource( 1 )
icon_align = 2

[node name="HSeparator4" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 97.0
margin_right = 670.0
margin_bottom = 105.0

[node name="Announcer" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 10 )]
margin_top = 105.0
margin_right = 670.0
margin_bottom = 177.0
_menu_element = NodePath("OptionButtonElement")

[node name="Label" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer/Announcer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -16.0
margin_right = 226.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 12 )
text = "Announcer Voice"

[node name="OptionButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer/Announcer" instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -14.5
margin_right = -30.0
margin_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 175, 40 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../VolumeLevelsButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../Jersey/OptionButtonElement")
focus_next = NodePath("../../Jersey/OptionButtonElement")
focus_previous = NodePath("../../VolumeLevelsButtonElement")
size_flags_horizontal = 5
text = "Announcer"

[node name="DisplaySection" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
margin_top = 177.0
margin_right = 670.0
margin_bottom = 202.0
text = "Display Settings"
valign = 1

[node name="Jersey" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 10 )]
margin_top = 202.0
margin_right = 670.0
margin_bottom = 274.0
_menu_element = NodePath("OptionButtonElement")

[node name="Label" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer/Jersey"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -16.0
margin_right = 226.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 12 )
text = "Dudeling Jersey"

[node name="OptionButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer/Jersey" instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -14.5
margin_right = -30.0
margin_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 175, 40 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../Announcer/OptionButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../CRTFilterCheckButtonElement")
focus_next = NodePath("../../CRTFilterCheckButtonElement")
focus_previous = NodePath("../../Announcer/OptionButtonElement")
size_flags_horizontal = 5
text = "Jersey"

[node name="HSeparator0" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 274.0
margin_right = 670.0
margin_bottom = 282.0

[node name="CRTFilterCheckButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 4 )]
margin_top = 282.0
margin_right = 670.0
margin_bottom = 354.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Jersey/OptionButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../FullscreenCheckButtonElement")
focus_next = NodePath("../FullscreenCheckButtonElement")
focus_previous = NodePath("../Jersey/OptionButtonElement")
size_flags_horizontal = 5
theme = SubResource( 3 )
text = "CRT Filter"

[node name="HSeparator1" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 354.0
margin_right = 670.0
margin_bottom = 362.0

[node name="FullscreenCheckButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 4 )]
margin_top = 362.0
margin_right = 670.0
margin_bottom = 434.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../CRTFilterCheckButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../BorderlessCheckButtonElement")
focus_next = NodePath("../BorderlessCheckButtonElement")
focus_previous = NodePath("../CRTFilterCheckButtonElement")
size_flags_horizontal = 5
text = "Fullscreen"

[node name="HSeparator2" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 434.0
margin_right = 670.0
margin_bottom = 442.0

[node name="BorderlessCheckButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 4 )]
margin_top = 442.0
margin_right = 670.0
margin_bottom = 514.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../FullscreenCheckButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../ScreenShakeCheckButtonElement")
focus_next = NodePath("../ScreenShakeCheckButtonElement")
focus_previous = NodePath("../FullscreenCheckButtonElement")
size_flags_horizontal = 5
text = "Borderless"

[node name="HSeparator3" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 514.0
margin_right = 670.0
margin_bottom = 522.0

[node name="ScreenShakeCheckButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 4 )]
margin_top = 522.0
margin_right = 670.0
margin_bottom = 594.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../BorderlessCheckButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../VirtualControllerButtonElement")
focus_next = NodePath("../VirtualControllerButtonElement")
focus_previous = NodePath("../BorderlessCheckButtonElement")
size_flags_horizontal = 5
text = "Screen Shake"

[node name="MiscSection" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
margin_top = 594.0
margin_right = 670.0
margin_bottom = 619.0
text = "Miscellaneous Settings"

[node name="VirtualControllerButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 4 )]
margin_top = 619.0
margin_right = 670.0
margin_bottom = 691.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../ScreenShakeCheckButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../TelemetryCollectCheck")
focus_next = NodePath("../TelemetryCollectCheck")
focus_previous = NodePath("../ScreenShakeCheckButtonElement")
size_flags_horizontal = 5
text = "Show Virtual Controller"

[node name="HSeparator8" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 691.0
margin_right = 670.0
margin_bottom = 699.0

[node name="ControllerVibrationCheckButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 4 )]
margin_top = 699.0
margin_right = 670.0
margin_bottom = 771.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../ScreenShakeCheckButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../TelemetryCollectCheck")
focus_next = NodePath("../TelemetryCollectCheck")
focus_previous = NodePath("../ScreenShakeCheckButtonElement")
size_flags_horizontal = 5
text = "Vibrate Controller"

[node name="HSeparator5" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 771.0
margin_right = 670.0
margin_bottom = 779.0

[node name="TelemetryCollectCheck" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 4 )]
margin_top = 779.0
margin_right = 670.0
margin_bottom = 851.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../VirtualControllerButtonElement")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../TelemetryDeleteButton")
focus_next = NodePath("../TelemetryDeleteButton")
focus_previous = NodePath("../VirtualControllerButtonElement")
size_flags_horizontal = 5
text = "Submit Usage Statistics"

[node name="HSeparator6" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 851.0
margin_right = 670.0
margin_bottom = 859.0

[node name="TelemetryDeleteButton" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 2 )]
margin_top = 859.0
margin_right = 670.0
margin_bottom = 931.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../TelemetryCollectCheck")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../VolumeLevelsButtonElement")
focus_next = NodePath("../VolumeLevelsButtonElement")
focus_previous = NodePath("../TelemetryCollectCheck")
size_flags_horizontal = 5
text = "Delete My Usage Data"
icon_align = 2

[node name="HSeparator9" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
show_behind_parent = true
margin_top = 931.0
margin_right = 670.0
margin_bottom = 939.0

[node name="CreditsButtonElement" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer" instance=ExtResource( 2 )]
margin_top = 939.0
margin_right = 670.0
margin_bottom = 1011.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../TelemetryCollectCheck")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../VolumeLevelsButtonElement")
focus_next = NodePath("../VolumeLevelsButtonElement")
focus_previous = NodePath("../TelemetryCollectCheck")
size_flags_horizontal = 5
text = "Credits..."
icon = SubResource( 2 )
icon_align = 2

[node name="HSeparator7" type="HSeparator" parent="BackgroundPanel/MenuContainer/ScrollContainer/ElementContainer"]
visible = false
show_behind_parent = true
margin_top = 747.0
margin_right = 670.0
margin_bottom = 751.0
